--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {},
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-load-plugins": "^1.6.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
