--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gulp-uglify": "^3.0.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "gulp watch"
   },
   "repository": {
     "type": "git",
