--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/register": "^7.6.2",
+    "autoprefixer": "^9.6.1",
+    "babelify": "^10.0.0",
+    "cssnano": "^4.1.10",
+    "del": "^4.1.1",
     "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
+    "gulp-bro": "^1.0.3",
     "gulp-load-plugins": "^1.6.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2"
