--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "gulp-wp-pot": "^2.3.6"
   },
   "scripts": {
     "dev": "gulp watch"
